connection between background and popup established to send messages; background detects when popup is opened or closed

--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,20 @@
   "manifest_version": 2,
   "name": "Productivity Solution",
   "version": "1.0",
-  "default_locale": "en",
   "author": "Kshitij Dahal",
 
   "browser_action": {
     "default_title": "Productivity Solution",
     "default_popup": "popup.html"
   },
+  "permissions": ["tabs"],
+  "background": {
+    "scripts": ["background.js"]
+  },
 
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/watch?v=*"],
+      "matches": ["https://www.youtube.com/*"],
       "js": ["block-youtube.js"]
     }
   ]
