--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_title": "Productivity Solution",
     "default_popup": "popup.html"
   },
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "storage"],
   "background": {
     "scripts": ["background.js"]
   },
