--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
-
+  "options_page": "options.html",
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
